--- a/client/src/app/business-creation/business-creation.component.html
+++ b/client/src/app/business-creation/business-creation.component.html
@@ -1,98 +1,207 @@
 <main class="creation">
-	<div class="row">
+  <div class="row">
+    <form [formGroup]="businessCreationForm">
+      <div class="col-1-of-2 creation-left">
+        <div *ngFor="let notif of notificationService.getNotifications()">
+          <app-notification
+            [message]="notif.text"
+            [type]="notif.type"
+          ></app-notification>
+        </div>
+        <input
+          type="text"
+          class="signin-input"
+          formControlName="title"
+          placeholder="Business name"
+        />
+        <input
+          type="text"
+          class="signin-input"
+          formControlName="description"
+          placeholder="Business Decription"
+        />
+        <select
+          type=""
+          class="signin-input"
+          formControlName="category"
+          placeholder="Choose category"
+          (change)="onChangeCategory($event)"
+        >
+          <option value="" disabled selected>Select your Category</option>
+          <option *ngFor="let category of categories" [value]="category">{{
+            category
+          }}</option>
+        </select>
+        <select
+          class="signin-input"
+          formControlName="country"
+          placeholder="Country"
+          (change)="onChangeCountry($event)"
+        >
+          <option value="" disabled selected>Select your country</option>
+          <option
+            [value]="country.name"
+            *ngFor="let country of this.countriesList"
+          >
+            {{ country.name }}</option
+          >
+        </select>
+        <select
+          class="signin-input"
+          formControlName="state"
+          placeholder="State"
+        >
+          <option value="" disabled selected>Select your State</option>
+          <option [value]="state" *ngFor="let state of selectedCountry?.states">
+            {{ state }}</option
+          >
+        </select>
+        <input
+          type="text"
+          class="signin-input"
+          formControlName="locality"
+          placeholder="Locality"
+        />
 
-		<form [formGroup]="businessCreationForm" >
-		<div class="col-1-of-2 creation-left">
-				<div *ngFor="let notif of notificationService.getNotifications()">
-						<app-notification [message]="notif.text" [type]="notif.type"></app-notification>
-					  </div>
-				<input type="text" class="signin-input" formControlName="title" placeholder="Business name">
-				<input type="text" class="signin-input" formControlName="description" placeholder="Business Decription">
-				<select type="" class="signin-input" formControlName="category" placeholder="Choose category" (change)="onChangeCategory($event)">
-					<option value="" disabled selected>Select your Category</option>
-					<option *ngFor="let category of categories" [value]="category">{{category}}</option>
-				</select>
-				<select class="signin-input" formControlName="country" placeholder="Country" (change)="onChangeCountry($event)">
-					<option value="" disabled selected>Select your country</option>
-					<option [value]="country.name" *ngFor="let country of this.countriesList"> {{country.name}}</option>
-				</select>
-				<select class="signin-input" formControlName="state" placeholder="State">
-						<option value="" disabled selected>Select your State</option>
-					<option [value]="state" *ngFor="let state of selectedCountry?.states"> {{state}}</option>
-				</select>
-				<input type="text" class="signin-input" formControlName="locality" placeholder="Locality">
+        <input
+          type="text"
+          class="signin-input"
+          formControlName="number"
+          placeholder="Phone number"
+          value="{{ selectedCountry?.phone_code }}"
+        />
+        <input
+          type="text"
+          class="signin-input"
+          formControlName="postal_code"
+          placeholder="Postal Code"
+        />
 
-				
-				<input type="text"  class="signin-input" formControlName="number" placeholder="Phone number" value = "{{selectedCountry?.phone_code}}">
-				<input type="text" class="signin-input" formControlName="postal_code" placeholder="Postal Code">
-				
-				<input type="email" class="signin-input" formControlName="email" placeholder="Email">
-				<input type="time" class="signin-input" formControlName="openingHour" placeholder="Opening Hour">
-				<input type="time" class="signin-input" formControlName="closingHour" placeholder="Closing Hour">
-			</div>
-			
-		</form>
-		<div class="col-1-of-2 creation-right">
-			<div class="creation-box">
-				<img src="assets/img/business.jpg" *ngIf="!thumbnail_path" class="creation-image">
-				<img [src]="thumbnail_path" *ngIf="thumbnail_path" class="creation-image">
-			
-				<label for="file" class="creation-btn">Choose Thumbnail</label>
-				<input id="file" type="file" value="Choose a picture" class="creation-btn" style="visibility:hidden;" (change)="showPreviewImage($event)">
-			</div>
-		</div>
-	</div>
-	<div class="row creation-mid">
-		<input type="button" *ngIf="!businessAlreadyCreated" (click)="onSubmit()" value="Create Business" class="btn btn--green">
-		<input type="button" *ngIf="businessAlreadyCreated" (click)="onUpdate()" value="Update Business" class="btn btn--green">
-		<a  (click)="openPopup()" *ngIf="businessAlreadyCreated && !subscriptionPayed" (click)="onPay()" class="btn search-btn--notif">Pay Subscription</a>
-		
-	</div>
+        <input
+          type="email"
+          class="signin-input"
+          formControlName="email"
+          placeholder="Email"
+        />
+        <input
+          type="time"
+          class="signin-input"
+          formControlName="openingHour"
+          placeholder="Opening Hour"
+        />
+        <input
+          type="time"
+          class="signin-input"
+          formControlName="closingHour"
+          placeholder="Closing Hour"
+        />
+      </div>
+    </form>
+    <div class="col-1-of-2 creation-right">
+      <div class="creation-box">
+        <img
+          src="assets/img/business.jpg"
+          *ngIf="!thumbnail_path"
+          class="creation-image"
+        />
+        <img
+          [src]="thumbnail_path"
+          *ngIf="thumbnail_path"
+          class="creation-image"
+        />
+
+        <label for="file" class="creation-btn">Choose Thumbnail</label>
+        <input
+          id="file"
+          type="file"
+          value="Choose a picture"
+          class="creation-btn"
+          style="visibility:hidden;"
+          (change)="showPreviewImage($event)"
+        />
+      </div>
+    </div>
+  </div>
+  <div class="row creation-mid">
+    <input
+      type="button"
+      *ngIf="!businessAlreadyCreated"
+      (click)="onSubmit()"
+      value="Create Business"
+      class="btn btn--green"
+    />
+    <input
+      type="button"
+      *ngIf="businessAlreadyCreated"
+      (click)="onUpdate()"
+      value="Update Business"
+      class="btn btn--green"
+    />
+    <a
+      (click)="openPopup()"
+      *ngIf="businessAlreadyCreated && !subscriptionPayed"
+      (click)="onPay()"
+      class="btn search-btn--notif"
+      >Pay Subscription</a
+    >
+  </div>
+  <div style="margin-bottom:32px"></div>
 </main>
 <section class="popup" id="popup" *ngIf="openedPopup">
-			<div class="popup__content">
-
-					<a (click)="closePopup()" class="popup__close">&times;</a>
-					<div class="payement-box">
-						<h2 class="payement-title"> Choose your plan</h2>
-						<div class="payement-plans">
-							<div class="payement-offer">
-								<h4 class="payement-offer-title">Silver</h4>
-								<ul class="payement-offer-options">
-									<li class="payement-offer-option">Adding your business</li>
-									<li class="payement-offer-option">Multi criteria search</li>
-
-								</ul>
-								<h2 class="payement-offer-price">$15</h2>
-								<button type="button" class="payement-offer-btn" (click)="onPay('silver')">Buy</button>
-							</div>
-							<div class="payement-offer">
-								<h4 class="payement-offer-title">Gold</h4>
-								<ul class="payement-offer-options">
-									<li class="payement-offer-option">Adding your business</li>
-									<li class="payement-offer-option">Multi criteria search</li>
-									<li class="payement-offer-option">Location based search</li>
-
-								</ul>
-								<h2 class="payement-offer-price">$30</h2>
-								<button type="button" class="payement-offer-btn" (click)="onPay('gold')">Buy</button>
-
-							</div>
-							<div class="payement-offer">
-								<h4 class="payement-offer-title">Platnium</h4>
-								<ul class="payement-offer-options">
-									<li class="payement-offer-option">Adding your business</li>
-									<li class="payement-offer-option">Multi criteria search</li>
-									<li class="payement-offer-option">Location based search</li>
-									<li class="payement-offer-option">Optimised business marketing</li>
-								</ul>
-								<h2 class="payement-offer-price">$50</h2>
-								<button type="button" class="payement-offer-btn" (click)="onPay('platinum')">Buy</button>
-
-							</div>
-
-						</div>
-					</div>
-
-			</div>
-		</section>
+  <div class="popup__content">
+    <a (click)="closePopup()" class="popup__close">&times;</a>
+    <div class="payement-box">
+      <h2 class="payement-title">Choose your plan</h2>
+      <div class="payement-plans">
+        <div class="payement-offer">
+          <h4 class="payement-offer-title">Silver</h4>
+          <ul class="payement-offer-options">
+            <li class="payement-offer-option">Adding your business</li>
+            <li class="payement-offer-option">Multi criteria search</li>
+          </ul>
+          <h2 class="payement-offer-price">$15</h2>
+          <button
+            type="button"
+            class="payement-offer-btn"
+            (click)="onPay('silver')"
+          >
+            Buy
+          </button>
+        </div>
+        <div class="payement-offer">
+          <h4 class="payement-offer-title">Gold</h4>
+          <ul class="payement-offer-options">
+            <li class="payement-offer-option">Adding your business</li>
+            <li class="payement-offer-option">Multi criteria search</li>
+            <li class="payement-offer-option">Location based search</li>
+          </ul>
+          <h2 class="payement-offer-price">$30</h2>
+          <button
+            type="button"
+            class="payement-offer-btn"
+            (click)="onPay('gold')"
+          >
+            Buy
+          </button>
+        </div>
+        <div class="payement-offer">
+          <h4 class="payement-offer-title">Platnium</h4>
+          <ul class="payement-offer-options">
+            <li class="payement-offer-option">Adding your business</li>
+            <li class="payement-offer-option">Multi criteria search</li>
+            <li class="payement-offer-option">Location based search</li>
+            <li class="payement-offer-option">Optimised business marketing</li>
+          </ul>
+          <h2 class="payement-offer-price">$50</h2>
+          <button
+            type="button"
+            class="payement-offer-btn"
+            (click)="onPay('platinum')"
+          >
+            Buy
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
